# flow

./: .gitignore  Makefile.am  autogen.sh  configure.ac  vala-support
demo/: .gitignore  Makefile  Makefile.am  ball-on-beam.vala  constant.vala  flow-demo-ode.vala  flow-demo.vala  gtk-ball-on-beam.vala  gtk-stiff-pendulum.vala  interpolate.vala  linear-test-equation.vala  lorentz.vala  step.vala  stiff-pendulum.vala  test-spline.vala
flow/: .gitignore  Makefile  Makefile.am  flow-dopri.vala  flow-euler.vala  flow-integrator.vala  flow-math.c  flow-ode-sample.vala  flow-ode-solver.vala  flow-ode.vala  flow-runge-kutta-explicit.vala  flow-rungekutta-explicit.vala  flow-solver.vala  flow-spline.vala  flow-step-method.vala  flow-vector.vala
util/: Makefile.am  headerify  plot
